--- a/RegIn_Yar/packages.config
+++ b/RegIn_Yar/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Aspose.Imaging" version="24.4.0" targetFramework="net472" />
   <package id="BouncyCastle.Cryptography" version="2.2.1" targetFramework="net472" />
   <package id="Google.Protobuf" version="3.25.1" targetFramework="net472" />
   <package id="K4os.Compression.LZ4" version="1.3.5" targetFramework="net472" />
@@ -18,5 +19,6 @@
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
   <package id="ZstdSharp.Port" version="0.7.1" targetFramework="net472" />
 </packages>
